# nanoGPT-rs

./: Cargo.toml  README.md  model.json
src/: cache.rs  cli.rs  config.rs  dataset.rs  generate.rs  main.rs  model.rs  param.rs  pretokenize.rs  rotary.rs  tokenize.rs  train.rs
