[package]
name = "nano_gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.17", default-features = false }
rand_distr = { version = "0.4.3", default-features = false }
cudarc = {version = "0.9.14"}
indicatif = {version ="*"}
rand = {version="0.8.5"}
clap = {version="*", features=["derive"]}
rust_tokenizers = {version="*"}
itertools = {version="*"}
safetensors = {version="*"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.dfdx]
git = "https://github.com/coreylowman/dfdx"
version = "0.13.0"
optional = false

[dependencies.dfdx-core]
git = "https://github.com/coreylowman/dfdx"
version = "0.13.0"
optional = false

[dependencies.dfdx-derives]
git = "https://github.com/coreylowman/dfdx"
version = "0.13.0"
optional = false


[features]
safetensors=["dfdx/safetensors", "dfdx-core/safetensors"]
cuda = ["dfdx/cuda", "dfdx-core/cuda"]
cpu = ["dfdx/cpu", "dfdx-core/cpu"]
default=["safetensors", "cpu"]


